--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+#root a {
+  width: 100%;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -20,4 +23,45 @@ aside {
   width: 250px;
   background: skyblue;
   height: 85ch;
+}
+.post {
+  border: outset rgb(177, 231, 252);
+  box-shadow: 5px 5px 10px grey;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5%;
+  max-width: 600px;
+  width: 100%;
+}
+.post img {
+  max-width: 600px;
+  max-height: 400px;
+  width: 100%;
+  border: solid rgb(198, 247, 243);
+}
+#recipe-link {
+  border-left: 6px solid rgb(44, 167, 130);
+}
+.image-upload > input {
+  display: none;
+}
+.attach-doc {
+  cursor: cell;
+}
+.MuiOutlinedInput-input {
+  width: 500px;
+}
+.allRecipes {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.recipeCard {
+  max-width: 300px;
+  margin: 20px;
+  box-shadow: 0px 10px 1px rgba(78, 135, 173, 0.39),
+    0 10px 20px rgb(1, 126, 105);
+  border-radius: 6%;
+  padding: 20px;
 }
