--- a/src/App.css
+++ b/src/App.css
@@ -136,13 +136,15 @@ header {
   width: 100%;
 }
 .logoHome {
-  margin-top: 50px;
+  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
   display: block;
+  width: 100%;
+  max-width: 850px;
 }
-.backgroundCard  {
-  background-color:#F9FEFF ;
+.backgroundCard {
+  background-color: #f9feff;
 }
 
 .divForm {
@@ -152,7 +154,7 @@ header {
 }
 .btn {
   margin-top: 20px;
-  border: 1px solid black
+  border: 1px solid black;
 }
 .description {
   font-size: 20px;
@@ -171,8 +173,8 @@ header {
   justify-content: space-evenly;
 }
 .recipeInfos {
-display: flex;
-flex-direction: column
+  display: flex;
+  flex-direction: column;
 }
 .recipeDescription {
   text-align: center;
@@ -188,15 +190,15 @@ flex-direction: column
 }
 
 .btnDetails {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .authThird {
   display: flex;
   justify-content: space-evenly;
 }
 .google {
-  width:100px
+  width: 100px;
 }
 .randomSign {
   display: flex;
@@ -206,8 +208,8 @@ justify-content: space-between;
 }
 .signupElement {
   margin-bottom: 30px;
- text-align: center;
- font-size: 25px;
+  text-align: center;
+  font-size: 25px;
 }
 .buttonProfile {
   margin-top: 30px;
@@ -271,4 +273,9 @@ justify-content: space-between;
 .postinput {
   max-width: 500px !important;
   width: 100% !important;
+}
+
+.singup {
+  max-height: 650px !important;
+  width: auto;
 }
