cleared extra rows

--- a/src/App.css
+++ b/src/App.css
@@ -278,4 +278,8 @@ header {
 .singup {
   max-height: 650px !important;
   width: auto;
+  font-size: small !important;
+}
+.singup input {
+  height: 50% !important;
 }
